fixed margin spacing issue

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-right: 1rem;
 
     p {
       letter-spacing: 2px;
